feat:setup CRUD for comaign with proper err handling and post req for personalized msg

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Outflo Server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node -r dotenv/config dist/index.js"
+    "start": "node -r dotenv/config dist/index.js",
+    "seed:accounts": "ts-node -r dotenv/config scripts/seedAccounts.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +17,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.14.2",
-    "pino": "^9.6.0",
-    "zod": "^3.24.4"
+    "openai": "^4.98.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
